--- a/src/assets/css/panels/home.css
+++ b/src/assets/css/panels/home.css
@@ -1,3 +1,16 @@
+.superlogo {
+    translate: 0 2.8rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 15%;
+    transition: transform 0.15s ease-out;
+}
+
+.superlogo:hover {
+    transform: scale(1.03);
+}
+
 .bottom-bar-home {
     position: fixed;
     bottom: 0;
