--- a/src/assets/css/panels/home.css
+++ b/src/assets/css/panels/home.css
@@ -9,6 +9,14 @@
     display: flex;
 }
 
+icon {
+    background-color: f55;
+    margin-right: 10px;
+    padding: 6px 2px;
+    border-radius: 4px;
+    font-size: 24px;
+}
+
 .player-head {
     margin: auto 30px;
     background-image: url("../../images/default/setve.png");
@@ -111,7 +119,7 @@
 .news-list {
     position: relative;
     overflow: auto;
-    width: 100%;
+    width: 75%;
 }
 
 .news-list::-webkit-scrollbar {
@@ -163,6 +171,14 @@
     align-items: center;
     height: 3em;
     transition: color .2s;
+}
+
+.superlogo {
+    width: 580px;
+    left: 50vh;
+    top: 9vh;
+    position: relative;
+    z-index: 20;
 }
 
 .date {
@@ -225,11 +241,26 @@
 .server {
     position: relative;
     width: 100%;
-    height: 75px;
+    height: 90px;
     background-color: #292929;
     border-radius: 10px;
     transition: opacity 1s;
     opacity: .4;
+}
+
+.card {
+    position: relative;
+    width: 100%;
+    height: 90px;
+    background-color: #292929;
+    border-radius: 10px;
+    transition: opacity 1s;
+    opacity: .4;
+}
+
+.card:hover {
+    transition: opacity 1s;
+    opacity: 1;
 }
 
 .server:hover {
@@ -237,12 +268,16 @@
     opacity: 1;
 }
 
+.padding-10 {
+    padding-top: 10px;
+}
 .server-img {
     position: absolute;
-    width: 42px;
-    height: 45px;
+    width: 58px;
+    height: 58px;
     top: 15px;
     left: 15px;
+    border-radius: 10px;
 }
 
 .name {
@@ -250,7 +285,7 @@
     font: normal normal bold 17px/25px Poppins;
     color: #E1E1E1;
     top: 17px;
-    left: 70px;
+    left: 80px;
     transition: color .2s;
 }
 
@@ -260,7 +295,7 @@
     color: #E1E1E1;
     transition: all .2s;
     top: 40px;
-    left: 70px;
+    left: 80px;
     transition: color .2s;
 }
 
@@ -308,4 +343,8 @@
 
 .online.off {
     background-color: #FF0409;
+}
+
+.blue {
+    color: #0037ff;
 }
